deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-api
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
      - path: /api/ums(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ums
            port:
              number: 8081
      - path: /api/twitter(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: twitter
            port:
              number: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-ui
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-login
            port:
              number: 80
